--- a/scss/style.css
+++ b/scss/style.css
@@ -1554,7 +1554,7 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   text-transform: uppercase;
 }
 .products__button-more {
-  width: 20%;
+  min-width: 20%;
   margin-top: 40px;
   margin-left: 42.5%;
   padding: 7px;
@@ -1620,19 +1620,33 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     font-size: 14px;
   }
 }
-@media screen and (min-width: 1170px) and (max-width: 1534px) {
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__visible-wrapper {
     min-height: 730px;
   }
   .products__product-card {
-    margin-right: 8px;
+    margin-right: 7px;
     padding-bottom: 0;
     min-height: 750px;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) and (max-width: 1077px) {
+  .products__product-card {
+    min-height: 820px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__card-content {
     padding: 10px;
     min-height: 500px;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) and (max-width: 1077px) {
+  .products__card-content {
+    height: 577px;
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__card-img {
     padding: 10px 20px;
     min-height: 31%;
@@ -1640,21 +1654,31 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   .products__card-img img {
     width: 75%;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__card-title {
     font-size: 20px;
     line-height: 28px;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__card-subtitle {
     margin-top: 5px;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__card-info {
     font-size: 13px;
     line-height: 17px;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__button-read-more {
     margin-bottom: 10px;
     font-size: 13px;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__size-option {
     box-sizing: border-box;
     width: 21%;
@@ -1662,12 +1686,23 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     font-size: 11px;
     margin-right: 0;
   }
+}
+@media screen and (min-width: 1024px) and (max-width: 1534px) {
   .products__button-buy {
-    padding: 8px;
-    font-size: 14px;
+    max-width: 50px;
+    padding: 5px;
+    border: none;
+    border-radius: 4px;
+    font-family: "Rubik", sans-serif;
+    font-size: 10px;
+    font-weight: 400;
+    text-align: center;
+    background-color: #D71635;
+    color: #FFFFFF;
+    cursor: pointer;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 612px) and (max-width: 1023px) {
   .products__title {
     font-weight: 600;
     font-size: 30px;
@@ -1685,9 +1720,164 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     width: 45%;
     margin-right: 0;
   }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) and (max-width: 672px) {
+  .products__product-card {
+    width: 49%;
+  }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) {
+  .products__card-title {
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 28px;
+  }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) {
+  .products__card-info {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) and (max-width: 740px) {
+  .products__card-info {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) {
   .products__card-img {
     min-height: 25%;
-    padding: 5px 50px;
+    padding: 10px 50px;
+  }
+  .products__card-img img {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) {
+  .products__size-option {
+    width: 21%;
+    padding: 3px 0;
+    font-size: 12px;
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 612px) and (max-width: 1023px) {
+  .products__button-buy {
+    max-width: 120px;
+    padding: 7px;
+    border: none;
+    border-radius: 4px;
+    font-family: "Rubik", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+    background-color: #D71635;
+    color: #FFFFFF;
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) {
+  .products__title {
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 30px;
+  }
+  .products__subtitle {
+    width: 96%;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;
+  }
+  .products__visible-wrapper {
+    flex-wrap: wrap;
+  }
+  .products__product-card {
+    width: 96%;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) and (max-width: 425px) {
+  .products__product-card {
+    min-height: 800px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) {
+  .products__card-img {
+    min-height: 25%;
+    padding: 20px;
+  }
+  .products__card-img img {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) and (max-width: 430px) {
+  .products__card-img img {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) {
+  .products__card-content {
+    padding: 10px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) {
+  .products__card-title {
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 28px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) and (max-width: 265px) {
+  .products__card-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 25px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) {
+  .products__card-info {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) and (max-width: 425px) {
+  .products__card-info {
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) and (max-width: 453px) {
+  .products__size-option {
+    width: 21%;
+    padding: 3px 0;
+    font-size: 12px;
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) and (max-width: 453px) {
+  .products__button-buy {
+    max-width: 120px;
+    padding: 7px;
+    border: none;
+    border-radius: 4px;
+    font-family: "Rubik", sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    text-align: center;
+    background-color: #D71635;
+    color: #FFFFFF;
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 200px) and (max-width: 611px) {
+  .products__button-more {
+    min-width: 70%;
+    margin-left: 15%;
   }
 }
 .photos {
