fix bug of about-card-img

--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -154,7 +154,7 @@
             margin-right: 0;
         }
 
-        @media (max-width: 390px) {
+        @media (max-width: 548px) {
             height: auto;
         }
 
@@ -189,6 +189,7 @@
 
         @media (max-width: 460px) {
             padding: 13px;
+            height: auto;
         }
 
         & p {
