--- a/scss/style.css
+++ b/scss/style.css
@@ -3298,12 +3298,13 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   width: 16px;
   height: 16px;
   background-color: #F4F7FB;
-  top: 464px;
-  left: 34px;
+  top: 0;
+  left: 0;
 }
 
 .checkb-lbl {
-  margin-left: 28px;
+  position: relative;
+  padding-left: 28px;
 }
 
 .checkb {
@@ -3426,8 +3427,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     width: 16px;
     height: 16px;
     background-color: #F4F7FB;
-    top: 548px;
-    left: 20px;
   }
 }
 @media screen and (max-width: 320px) {
@@ -3501,8 +3500,6 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
     width: 16px;
     height: 16px;
     background-color: #F4F7FB;
-    top: 578px;
-    left: 20px;
   }
 }
 .title-container_contacts {
