--- a/scss/blocks/_about.scss
+++ b/scss/blocks/_about.scss
@@ -446,14 +446,26 @@
             width: 32px;
             height: 10px;
             bottom: 32px;
-            left: 295px;
+            left: 215px;
 
-            @media (min-width:1301px) and (max-width:1600px) {
+            @media (min-width:1301px) and (max-width:1460px) {
                 left: 190px;
+            }
+
+            @media (min-width:1201px) and (max-width:1300px) {
+                left: 295px;
             }
 
             @media (min-width:991px) and (max-width:1200px) {
                 left: 265px;
+            }
+
+            @media (max-width: 990px) {
+                left: 190px;
+            }
+
+            @media (max-width: 390px) {
+                left: 175px;
             }
         }
     }
