--- a/scss/style.css
+++ b/scss/style.css
@@ -1372,16 +1372,31 @@ span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   width: 32px;
   height: 10px;
   bottom: 32px;
-  left: 295px;
+  left: 215px;
 }
-@media (min-width: 1301px) and (max-width: 1600px) {
+@media (min-width: 1301px) and (max-width: 1460px) {
   .about__btn::after {
     left: 190px;
+  }
+}
+@media (min-width: 1201px) and (max-width: 1300px) {
+  .about__btn::after {
+    left: 295px;
   }
 }
 @media (min-width: 991px) and (max-width: 1200px) {
   .about__btn::after {
     left: 265px;
+  }
+}
+@media (max-width: 990px) {
+  .about__btn::after {
+    left: 190px;
+  }
+}
+@media (max-width: 390px) {
+  .about__btn::after {
+    left: 175px;
   }
 }
 
