--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -9,6 +9,10 @@
 
         img {
             width: 10%;
+
+            @media (max-width:750px) {
+                width: auto;
+            }
         }
     }
 
