--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -7,6 +7,14 @@
     font-family: $main-font;
     font-weight: 400;
     background-color: $bg-color-white;
+
+    @media (max-width:768px) {
+        margin-top: 450px;
+    }
+
+    @media (max-width:480px) {
+        margin: 0 auto;
+    }
 }
 
 .footer-logo {
@@ -78,7 +86,7 @@
     }
 }
 
-@media screen and (min-width: 1045px) and (max-width: 1233px) {
+@media screen and (min-width: 989px) and (max-width: 1233px) {
     .footer {
         max-width: 1024px;
         min-width: 1024px;
@@ -109,46 +117,18 @@
     }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-    .footer {
-        max-width: 1024px;
-        min-width: 1024px;
-    }
-
-    .footer-logo {
-        margin-top: 81px;
-        margin-left: 50px;
-    }
-
-    .footer-menu {
-        margin-left: 140px;
-    }
-
-    .footer-contacts {
-        margin-left: 80px;
-
-        &_top {
-            margin-top: 75px;
-            margin-left: 0;
-        }
-
-        &_bottom {
-            max-width: 280px;
-            margin-top: 20px;
-            margin-left: 0;
-        }
-    }
-}
-
-@media screen and (min-width: 481px) and (max-width: 768px) {
+@media (min-width: 656px) and (max-width: 988px) {
     .footer {
         display: flex;
         flex-wrap: wrap;
         max-width: 750px;
         min-width: 750px;
         max-height: 383px;
-        margin: 400px auto 0;
     }
+}
+
+
+@media screen and (min-width: 481px) and (max-width: 988px) {
 
     .footer-logo {
         display: flex;
@@ -212,16 +192,17 @@
     }
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 655px) {
     .footer {
         display: flex;
         flex-direction: column;
         max-width: 390px;
         min-width: 390px;
-        margin: 0 auto;
     }
 
     .footer-logo {
+        display: flex;
+        flex-direction: column;
         max-height: 50px;
         margin-top: 35px;
         margin-bottom: 48px;
@@ -235,6 +216,7 @@
 
         &__text {
             min-width: 250px;
+            margin: 0;
         }
     }
 
