--- a/scss/blocks/_service.scss
+++ b/scss/blocks/_service.scss
@@ -29,6 +29,20 @@
         margin-top: 0;
         background-color: $bg-color-main;
         z-index: 0;
+
+        @media (max-width:1024px) {
+            max-height: 670px;
+            min-height: 670px;
+        }
+
+        @media (max-width:934px) {
+            max-height: 835px;
+            min-height: 835px;
+        }
+
+        @media (max-width:874px) {
+            max-height: fit-content;
+        }
     }
 
     &_bg-white {
@@ -177,8 +191,6 @@
             position: relative;
             display: grid;
             grid-template-columns: 1fr 1fr;
-            max-height: 670px;
-            min-height: 670px;
             margin-top: 0;
             z-index: 0;
         }
@@ -226,8 +238,6 @@
             position: relative;
             display: flex;
             flex-direction: column;
-            max-height: 835px;
-            min-height: 835px;
             margin-top: 0;
             z-index: 0;
         }
@@ -277,7 +287,6 @@
             position: relative;
             display: flex;
             flex-wrap: wrap;
-            max-height: fit-content;
             margin-top: 0;
             z-index: 0;
         }
